<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:id="@+id/container2"
    tools:context="com.example.radarlove.MainActivity$PlaceholderFragment" >
     <TextView
        android:id="@+id/textView1using"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:background="@drawable/mainbuttons"
        android:layout_above="@+id/textView1company"
        android:text="@string/help0"
        android:textColor="#ffffff"
        android:textSize="20sp" /> 
        
    <TextView
        android:id="@+id/textView1company"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:background="@drawable/mainbuttons"
        android:layout_above="@+id/textView1www"
        android:text="@string/help1"
        android:textColor="#ffffff"
        android:textSize="16sp" /> 
        
    <TextView
        android:id="@+id/textView1www"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:background="@drawable/mainbuttons"
        android:layout_above="@+id/textView1about"
        android:text="@string/help2"
        android:textColor="#ffffff"
        android:textSize="16sp" /> 

    <TextView
        android:id="@+id/textView1about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:background="@drawable/mainbuttons"
        android:text="@string/help3"
        android:textColor="#ffffff"
        android:textSize="16sp" /> 

    <TextView
        android:id="@+id/textView7about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1about"
        android:background="@drawable/mainbuttons"
        android:gravity="center_horizontal"
        android:text="@string/help4"
        android:textColor="#ffffff"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/textView8about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7about"
        android:background="@drawable/mainbuttons"
        android:gravity="center_horizontal"
        android:text="@string/help5"
        android:textColor="#ffffff"
        android:textSize="16sp" />
     <View
        android:id="@+id/view1b"
        style="@style/Divider"
        android:layout_above="@+id/textView1company" />
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ok" />    

</RelativeLayout>