<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/raininlights"
    android:paddingTop="?android:attr/actionBarSize" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout0"
        android:onClick="onClick"
        android:background="@drawable/mainbuttons"
        android:paddingBottom="6dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundiconradar" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="1dp"
                android:paddingStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/obbut"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/obdesc"
            android:visibility="gone"
            android:textColor="#F3E2A9"
            android:textSize="15sp" />
    </LinearLayout>
    
     <View
        android:id="@+id/view0"
        style="@style/Divider"
        android:layout_above="@+id/layout0" />
    
     <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout2"
        android:onClick="onClick"
        android:background="@drawable/mainbuttons"
        android:paddingBottom="6dp"
        android:orientation="vertical" >
     <LinearLayout
         
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundiconperc" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="1dp"
                android:paddingStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/fcprobbut"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView81"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/fcprobdesc"
            android:visibility="gone"
            android:textColor="#F3E2A9"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        style="@style/Divider"
        android:layout_above="@+id/layout2" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout3"
        android:background="@drawable/mainbuttons"
        android:onClick="onClick"
        android:paddingBottom="6dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundiconcomp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="1dp"
                android:paddingStart="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/fcbut"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:text="@string/fcdesc"
            android:visibility="gone"
            android:textColor="#F3E2A9"
            android:textSize="15sp" />
    </LinearLayout>
    
     <View
        android:id="@+id/view2"
        style="@style/Divider"
        android:layout_above="@+id/layout3" />

    <LinearLayout
        android:id="@+id/layout3"
        android:paddingBottom="6dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mainbuttons"
        android:onClick="onClick"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundiconcomp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="1dp"
                android:paddingStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/fxbut"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:text="@string/fxdesc"
            android:visibility="gone"
            android:textColor="#F3E2A9"
            android:textSize="15sp" />
    </LinearLayout>
   
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout1"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView1sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/textView1"
            android:text="@string/slogan"
            android:paddingTop="0dp"
            android:textColor="#444444"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/textView11"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showhelp"
            android:onClick="onClick"
            android:textColor="#000000"
            android:textSize="13sp"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/textView1sub"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
         <Button
            android:id="@+id/textView12"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/hidehelp"
            android:visibility="gone"
            android:onClick="onClick"
            android:textColor="#000000"
            android:textSize="13sp" />

    </RelativeLayout>
      
    <ImageView
        android:id="@+id/imagechevronob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:layout_alignTop="@+id/layout1"
        android:layout_margin="15dp"
        android:background="@drawable/chevron" />
    
     <ImageView
        android:id="@+id/imagechevronprobfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layout1"
        android:layout_margin="15dp"
        android:background="@drawable/chevron" />

    <ImageView
        android:id="@+id/imagechevronfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layout0"
        android:layout_margin="15dp"
        android:background="@drawable/chevron" />
    
     <ImageView
        android:id="@+id/imagechevronfx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layout2"
        android:layout_margin="15dp"
        android:background="@drawable/chevron" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_margin="5dp"
        android:visibility="gone" />
    
    <ProgressBar
        android:id="@+id/progressBar1a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/view0"
        android:layout_margin="5dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/view1"
        android:layout_margin="5dp"
        android:visibility="gone" />
    
     <ProgressBar
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/view2"
        android:visibility="gone" />

</RelativeLayout>